<resources>
    <string name="app_name">MotivationalQuotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="category1">Success</string>
    <string name="category2">Courage</string>
    <string name="category3">Dreams</string>
    <string name="category4">Workout</string>
    <string name="category5">Life</string>
    <string name="category6">Gratitude</string>
</resources>
