<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".MainActivity"
tools:showIn="@layout/app_bar_main">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Success"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category1"
        android:focusable="true"
        android:onClick="success"
        android:src="@mipmap/si" />

    <TextView
        android:id="@+id/t_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Courage"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category2"
        android:focusable="true"
        android:onClick="courage"
        app:srcCompat="@mipmap/ci" />

    <TextView
        android:id="@+id/t_courage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category2"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Dreams"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category3"
        android:focusable="true"
        android:onClick="dreams"
        app:srcCompat="@mipmap/di" />

    <TextView
        android:id="@+id/t_dreams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category3"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Workout"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category4"
        android:focusable="true"
        android:onClick="workout"
        app:srcCompat="@mipmap/wi" />

    <TextView
        android:id="@+id/t_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category4"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Life"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category5"
        android:focusable="true"
        android:onClick="life"
        app:srcCompat="@mipmap/li" />

    <TextView
        android:id="@+id/t_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category5"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_height" />

    <ImageView
        android:id="@+id/Gratitude"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/category6"
        android:focusable="true"
        android:onClick="gratitude"
        app:srcCompat="@mipmap/gi" />

    <TextView
        android:id="@+id/t_gratitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category6"
        android:textAlignment="center"
        android:textSize="@dimen/content_font"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_bottom" />

</LinearLayout>
</android.support.v4.widget.NestedScrollView>